# coffee-social-finder

./: .gitignore  README.md  app.db  coffee.db  package-lock.json  package.json  swagger.yaml
CaffeineCompass/app/: README.md  address_schema.py  comment_schema.py  comments_crud.py  cosmetics.py  database.py  main.py  requirements.txt  restaurantschema  restaurantschema.py  schemas.py  user.py
CaffeineCompass/app/core/: README.md  auth.py  config.py  database.py
CaffeineCompass/app/crud/: README.md  __init__.py  address.py  bookmark.py  tag.py
CaffeineCompass/app/models/: README.md  address.py  bookmark.py  comment.py  cosmetic.py  models.py  restaurant_tag.py  user.py
CaffeineCompass/app/routes/: README.md  __init__.py  address.py  bookmark.py  comment.py  cosmetic.py  restaurant.py  tag.py  user.py
CaffeineCompass/app/schemas/: README.md  bookmark_schema.py  comment_schema.py  cosmetic_schema.py  restaurant_schema.py  user_schema.py
CaffeineCompass/app/services/: database.py  main.py
CaffeineCompass/app/tests/: test_address.py  test_bookmark.py  test_comment.py  test_cosmetic.py  test_restaurant.py  test_user.py
CaffeineCompassBackEnd/: README.md
CaffeineCompassBackEnd/CaffeineCompass/: coffee.db
CaffeineCompassBackEnd/CaffeineCompass/app/: README.md  alembic.ini  coffee.db  database.ini  main.py
coffee-social/: README.md  package-lock.json  package.json
coffee-social-static/: index.html  restaurants.html  styles.css  tags.html
coffee-social/app/: globals.css
coffee-social/app/login/: page.module.css  page.tsx
coffee-social/app/signup/: page.module.css  page.tsx
coffee-social/src/app/: globals.css  layout.tsx  page.tsx
coffee-social/src/components/: ImageCarousel.tsx  Navbar.tsx  NavbarHome.tsx  SearchBar.tsx  forumReviewForm.tsx
coffee-social/src/data/: mockData.ts
coffee-social/src/styles/: globals.css
coffee-social/vite-project/: package.json
src/components/: ImageCarousel.tsx  Navbar.tsx  SearchBar.tsx
src/data/: mockData.ts
src/types/: index.ts
tests/: pyproject.toml
(+92 files in other folders)
